2011-05-10  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt][WK2] eventSender.keyDown is unimplemented

        * platform/qt-wk2/Skipped: Add fast/forms/radio-group-keyboard-change-event.html.

2011-05-10  Csaba Osztrogonác  <ossy@webkit.org>

        plugins/embed-prefers-plugins-for-images.html fails on non-Apple platforms.
        https://bugs.webkit.org/show_bug.cgi?id=57137

        * platform/qt-mac/Skipped: Add plugins/embed-prefers-plugins-for-images.html.

2011-05-10  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed fix.

        [Qt] DumpRenderTreeQt needs an implementation of unmarkText
        https://bugs.webkit.org/show_bug.cgi?id=60499

        r86124 implemented unmarkText() and it fixed a test,
        which doesn't need Qt specific expected failure anymore.

        * platform/qt/fast/events/ime-composition-events-001-expected.txt: Removed.

2011-05-10  MORITA Hajime  <morrita@google.com>

        Unreviewed flakiness marking (video-controls-rendering.html)
        
        * platform/chromium/test_expectations.txt:

2011-05-09  Martin Robinson  <mrobinson@igalia.com>

        Update the results for a test after r86102. This test was susceptible to
        scrollbar race conditions and r86102 changed timing slightly.

        * platform/gtk/scrollbars/custom-scrollbar-with-incomplete-style-expected.txt:

2011-05-09  Chang Shu  <cshu@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] DumpRenderTreeQt needs an implementation of unmarkText
        https://bugs.webkit.org/show_bug.cgi?id=60499

        Unskipped passed test.

        * platform/qt/Skipped:

2011-05-09  Kenji Imasaki  <imasaki@chromium.org>

        Reviewed by David Levin.

        [Chromium] Add rebaseline images for video-controls-rendering.
        https://bugs.webkit.org/show_bug.cgi?id=60517

        Chromium bug is http://crbug.com/82033. These rebaselines are necessary