@@ -1,3 +1,13 @@
+2011-05-10  Csaba Osztrogonác  <ossy@webkit.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] Add new qt-4.8 platform for layout testing
+        https://bugs.webkit.org/show_bug.cgi?id=60544
+
+        * Scripts/old-run-webkit-tests:
+        * Scripts/webkitdirs.pm:
+
 2011-05-09  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r86108.
