@@ -1,5 +1,14 @@
 2011-05-10  Csaba Osztrogonác  <ossy@webkit.org>
 
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] Add new qt-4.8 platform for layout testing
+        https://bugs.webkit.org/show_bug.cgi?id=60544
+
+        * platform/qt-4.8/Skipped: Added.
+
+2011-05-10  Csaba Osztrogonác  <ossy@webkit.org>
+
         [Qt][WK2] eventSender.keyDown is unimplemented
 
         * platform/qt-wk2/Skipped: Add fast/forms/radio-group-keyboard-change-event.html.
